Updated staff section to include rebekah and casey. Staff section is now visible again. Updated about us section content. Changed login nav link to redirect to zenplanner until I can figure out how to post directly to zenplanners login portal.

--- a/app/aboutUs/aboutUsController.html
+++ b/app/aboutUs/aboutUsController.html
@@ -7,12 +7,12 @@
 		<section class="section-pane">
 			<p class="intro-text">Introducing NinjaFit Gym, the premiere Ninja Warrior and OCR (Obstacle Course Racing) training facility in Central Florida!</p>
 
-			<!--<p class="center">
-				<iframe class="youtube-frame" src="https://www.youtube.com/embed/UDb-7DY3CjU?feature=player_embedded" frameborder="0" allowfullscreen=""></iframe>
-			</p>-->
+			<p class="center">
+				<iframe class="youtube-frame" src="https://www.youtube.com/embed/Eugn8dCR26Q?feature=player_embedded" frameborder="0" allowfullscreen=""></iframe>
+			</p>
 
 			<p>
-			Are you finding it hard to properly train for a race in a 'Globo Gym'? Have you ever watched American Ninja Warrior and thought, 'I could do that  if only I had access to the obstacles!'?  Here is your chance! Train to be a Ninja Warrior, practice regular OCR obstacles for that big race coming up, and take your overall fitness to the next level in our state of the art NinjaFit Strength and NinjaFit Bootcamp classes.  Come one, come all, OCR elites and novices, aspiring ninja warriors, in shape, out of shape or just curious; this is the place for you!</p>
+			Are you finding it hard to properly train for a race in a 'Globo Gym'? Have you ever watched American Ninja Warrior and thought, 'I could do that  if only I had access to the obstacles!'?  Here is your chance! Train to be a Ninja Warrior, practice regular OCR obstacles for that big race coming up, and take your overall fitness to the next level in our state of the art facility.  Come one, come all, OCR elites and novices, aspiring ninja warriors, in shape, out of shape or just curious; this is the place for you!</p>
 		</section>
 	</section>
 
@@ -41,8 +41,6 @@
 				<li><span class="bold">Climbing Walls</span> (coming soon)</li>
 				<li><span class="bold">Quintuple Steps</span> (coming soon)</li>
 			</ul>
-
-			<p>NinjaFit Gym recommends you wear flat bottom athletic shoes (OCR style shoes/cleats are not recommended), and bring a small sweat towel and a water bottle. Chalk tape or gloves are suggested if you feel you need protection for your hands.</p>
 		</section>
 	</section>
 
@@ -51,9 +49,7 @@
 
 		<section class="section-pane">
 			<p class="image-wrapper"><img src="images/obstacle_2.jpg" /></p>
-			<p>Are you interested in... or already mad about...  Savage Race, Spartan, Battlefrog... just to name a few of the many OCR courses ready to be conquered?! Then our Obstacle Course Racing program is for you!  Our Spartan designed training classes will prepare any beginner for your first mud run, while challenging the experienced OCR racer focused on increasing strength and endurance, and honing the skills necessary to excel on race day! Come ready for a sweat inducing, fun, challenging workout in a friendly group environment! You can also choose to participate in one of our 90 day OCR Prep courses where we train for and race a specific OCR course together (look under Pricing and Promotions for more info).</p>
-  
-			<p>NinjaFit Gym recommends wearing comfortable, sweat wicking gym clothes/shoes, and bringing a small sweat towel, and a water bottle.</p>
+			<p>Are you interested in... or already mad about...  Savage Race, Spartan, Tough Mudder... just to name a few of the many OCR courses ready to be conquered?! Then our Obstacle Course Racing program is for you!  Our Spartan designed training classes will prepare any beginner for your first mud run, while challenging the experienced OCR racer focused on increasing strength and endurance, and honing the skills necessary to excel on race day! Come ready for a sweat inducing, fun, challenging workout in a friendly group environment!</p>
 		</section>
 	</section>
 
@@ -62,7 +58,7 @@
 
 		<section class="section-pane">
 			<p class="image-wrapper"><img src="images/functional_2.jpg" /></p>
-			<p>What is 'functional fitness'? Bending, lifting, carrying, climbing... are all everyday physical activities that we take for granted until the effects of weight gain, poor posture, and/or a sedentary lifestyle can make them difficult, even painful. Functional fitness trains your body so that it can perform these activities safely, easily and without pain. At NinjaFit Gym, our boot camp style functional fitness classes are designed to get you in shape head to toe, burning calories, building strength, increasing your flexibility, and improving your cardiovascular performance, all while having fun in the process. We incorporate free weights, kettlebells, ropes, medicine balls, balance boards, TRX equipment, plyometric/bodyweight exercises, box jumps, squat rags, pull up rigs, plyo boxes, rowers, stationary bikes, an aerodyne machine, and more to create a workout experience that will get you fit for LIFE!</p>
+			<p>At NinjaFit Gym, our boot camp style functional fitness classes are designed to get you in shape head to toe, burning calories, building strength, increasing your flexibility, and improving your cardiovascular performance, all while having fun in the process. We incorporate free weights, kettlebells, ropes, medicine balls, balance boards, TRX equipment, plyometric/bodyweight exercises, box jumps, squat racks, pull up rigs, plyo boxes, rowers, assault bikes, and more to create a workout experience that will get you fit for LIFE!</p>
 		</section>
 	</section>
 
@@ -80,11 +76,11 @@
 
 		<section class="section-pane">
 			<p class="image-wrapper"><img src="images/kids_1.jpg" /></p>
-			<p>What about your little ninja? Our NinjaFit Kids program includes a kid sized obstacle course.  A NinjaFit coach will guide your child through the basics of climbing, jumping, and swinging; and introduce them to the NinjaFit Skills necessary to conquer the obstacle course. **NinjaFit Kids coming later in 2016**</p>
+			<p>What about your little ninja? Our NinjaFit Kids program includes a kid sized obstacle course.  A NinjaFit coach will guide your child through the basics of climbing, jumping, and swinging; and introduce them to the NinjaFit Skills necessary to conquer the obstacle course.</p>
 		</section>
 	</section>
 
-	<!--<section id="staff" tabindex="-1" class="section">
+	<section id="staff" tabindex="-1" class="section">
 		<header class="section-header">Staff</header>
 
 		<ul class="staff-members">
@@ -98,6 +94,6 @@
 				</section>
 			</li>
 		</ul>
-	</section>-->
+	</section>
 
 </section>
