updated to new api

--- a/app/wod/wodController.html
+++ b/app/wod/wodController.html
@@ -16,7 +16,7 @@
 				</header>
 
 				<section class="wod-sub-header">
-					<span>Track By: </span><span ng-bind="wod.trackBy"></span>
+					<span ng-bind="wod.subtitle"></span>
 				</section>
 
 				<section class="wod-contents">
