--- a/app/aboutUs/aboutUsController.html
+++ b/app/aboutUs/aboutUsController.html
@@ -23,10 +23,11 @@
 			<div class="image-wrapper">
 				<img src="images/obstacle_1.jpg" />
 			</div>
-			<p>Do you have a serious interest in competing on the next American Ninja Warrior season? Are you wondering what all the ninja hype is about? Maybe you are  just looking to improve your fitness in general in a fun, yet challenging training program. Well look no further... Ninja Warrior training has finally come to Central Florida! Check out our list of obstacles that will continue to grow:</p>
+			<p>Do you have serious interest in competing on the next season of American Ninja Warrior? Do you watch the show thinking "Man, I would love to try to attempt some of those same obstacles!" Your Ninja Warrior training is here in central Florida, and it is called NinjaFit Gym. We have many members who train at the gym regularly who have competed on past seasons of American Ninja Warrior, and we'd love to have you come train with all of us!! Here is a list of just some of the obstacles we have to offer at NinjaFit:</p>
 
 			<ul>
 				<li><span class="bold">50 Foot Rig</span> (with numchucks, cannonballs, rings, disks, UFO, bananas)</li>
+				<li><span class="bold">30 Foot Rig</span></li>
 				<li><span class="bold">Rope Swing</span></li> 
 				<li><span class="bold">Cargo Nets</span></li>
 				<li><span class="bold">Rope Climbs</span></li>
@@ -38,8 +39,6 @@
 				<li><span class="bold">Goliath</span> (our custom designed ramp)</li>
 				<li><span class="bold">Rope wall</span></li>
 				<li><span class="bold">Hanging Ladders</span></li>
-				<li><span class="bold">Climbing Walls</span> (coming soon)</li>
-				<li><span class="bold">Quintuple Steps</span> (coming soon)</li>
 			</ul>
 		</section>
 	</section>
@@ -49,7 +48,7 @@
 
 		<section class="section-pane">
 			<p class="image-wrapper"><img src="images/obstacle_2.jpg" /></p>
-			<p>Are you interested in... or already mad about...  Savage Race, Spartan, Tough Mudder... just to name a few of the many OCR courses ready to be conquered?! Then our Obstacle Course Racing program is for you!  Our Spartan designed training classes will prepare any beginner for your first mud run, while challenging the experienced OCR racer focused on increasing strength and endurance, and honing the skills necessary to excel on race day! Come ready for a sweat inducing, fun, challenging workout in a friendly group environment!</p>
+			<p>Are you someone who already competes in Obstacle Course Racing? Have you just recently signed up for your first Spartan or Tough Mudder and are wondering "Where can I go to get prepared?" Our head trainer is a Spartan SGX Certified coach, so all the programming we offer is purpose built to help you get ready for your next race. It doesn't matter whether you're just getting into it or are considered an elite, our curriculum will help you take your game to the next level.</p>
 		</section>
 	</section>
 
@@ -67,7 +66,7 @@
 
 		<section class="section-pane">
 			<p class="image-wrapper"><img src="images/group_1.jpg" /></p>
-			Coming Soon!
+			<p>We have coaches/trainers that lead people in a WOD (Workout of the Day) that is built specifically to improve all aspects of ninja, OCR & functional fitness. These classes will integrate a wide range of exercises & obstacles to provide the best overall workout you can get. These classes are run every hour on the hour starting as early as 6am and as late as 8pm (Check hours/schedules for more details).</p>
 		</section>
 	</section>
 
@@ -76,7 +75,7 @@
 
 		<section class="section-pane">
 			<p class="image-wrapper"><img src="images/kids_1.jpg" /></p>
-			<p>What about your little ninja? Our NinjaFit Kids program includes a kid sized obstacle course.  A NinjaFit coach will guide your child through the basics of climbing, jumping, and swinging; and introduce them to the NinjaFit Skills necessary to conquer the obstacle course.</p>
+			<p>We have instructors leading kids through obstacle skill development, and then run them through an actual obstacle course. We've built a progression path for the kids through a "belt system" (just like martial arts) to continually advance themselves and their skills. The NinjaFit Kids program has been a big hit and many kids are well on their way to becoming future American Ninja Warriors!! (Ages 5 & up)</p>
 		</section>
 	</section>
 
@@ -90,6 +89,7 @@
 				</section>
 				<section class="member-content">
 					<p ng-bind="member.name" class="member-name"></p>
+					<p ng-bind="member.title" class="member-title"></p>
 					<div ng-bind-html="member.bio" class="member-details"></div>
 				</section>
 			</li>
