added kat to staff list

--- a/app/pricing/pricingDirective.html
+++ b/app/pricing/pricingDirective.html
@@ -13,7 +13,7 @@
 				</section>
 
 				<div class="content">
-					<p class="item">Unlimited gym access for <b>1</b> Class or <b>1</b> hour for Open Gym session(s).</p>
+					<p class="item">Access to <b>1</b> Class or <b>1</b> hour for Open Gym session(s).</p>
 				</div>
 			</section>
 		</section>
