updates from a few weeks ago

--- a/app/aboutUs/aboutUsController.html
+++ b/app/aboutUs/aboutUsController.html
@@ -74,7 +74,7 @@
 		<header class="section-header">NinjaFit Kids</header>
 
 		<section class="section-pane">
-			<p class="image-wrapper"><img src="images/kids_1.jpg" /></p>
+			<p class="image-wrapper h-align"><img src="images/kids_5.jpg" /></p>
 			<p>We have instructors leading kids through obstacle skill development, and then run them through an actual obstacle course. We've built a progression path for the kids through a "belt system" (just like martial arts) to continually advance themselves and their skills. The NinjaFit Kids program has been a big hit and many kids are well on their way to becoming future American Ninja Warriors!! (Ages 5 & up)</p>
 		</section>
 	</section>
