--- a/app/appNav/appNavDirective.html
+++ b/app/appNav/appNavDirective.html
@@ -1,13 +1,13 @@
-<section 
+<section
     ng-class="{ mobile: isMobile, desktop: !isMobile }"
     class="app-nav-wrapper">
 
-    <nav 
+    <nav
         class="app-nav"
         ng-class="{ open: isOpen}">
 
         <div class="logo-wrapper">
-            <a 
+            <a
                 ng-click="goTo('home')"
                 class="logo">
                 <span class="word">
@@ -23,7 +23,7 @@
                     <span class="remaining"><span>ym</span></span>
                 </span>
             </a>
-            <a 
+            <a
                 ng-click="toggle()"
                 class="menu-toggle">
                 <span class="bar"></span>
@@ -37,58 +37,66 @@
         </section>
 
         <ul class="nav-links">
-            <a 
+            <a
                 ng-class="{ active: route == 'about-us' }"
                 ng-click="goTo('about-us')"
                 class="nav-link">
                 <span class="fa fa-users"></span>
                 <span class="link-text"><span>About Us</span></span>
             </a>
-            <a 
+            <a
                 ng-class="{ active: route == 'facility' }"
                 ng-click="goTo('facility')"
                 class="nav-link">
                 <span class="fa fa-building"></span>
                 <span class="link-text"><span>Our Gym</span></span>
             </a>
-            <a 
+            <a
                 ng-class="{ active: route == 'news' }"
                 ng-click="goTo('news')"
                 class="nav-link">
                 <span class="fa fa-newspaper-o"></span>
                 <span class="link-text"><span>News</span></span>
             </a>
-            <a 
+            <a
                 ng-class="{ active: route == 'schedule' }"
                 ng-click="goTo('schedule')"
                 class="nav-link">
                 <span class="fa fa-calendar"></span>
                 <span class="link-text"><span>Schedule</span></span>
             </a>
-            <a 
-                class="nav-link" 
-                ng-click="goTo('wod')" 
+            <a
+                class="nav-link"
+                ng-click="goTo('wod')"
                 ng-class="{ active: route == 'wod' }">
 
                 <icon type="wod"></icon>
                 <span class="link-text"><span>WOD</span></span>
             </a>
-             <a 
-                class="nav-link" 
-                ng-click="goTo('pricing')" 
+             <a
+                class="nav-link"
+                ng-click="goTo('pricing')"
                 ng-class="{ active: route == 'pricing' }">
 
                 <span class="fa fa-money"></span>
                 <span class="link-text"><span>Pricing</span></span>
             </a>
-            <a 
+             <a
+                class="nav-link"
+                ng-click="goTo('waivers')" 
+                ng-class="{ active: route == 'waivers' }">
+
+                <span class="fa fa-money"></span>
+                <span class="link-text"><span>Waivers</span></span>
+            </a>
+            <a
                 ng-class="{ active: route == 'contact' }"
                 ng-click="goTo('contact')"
                 class="nav-link">
                 <span class="fa fa-envelope"></span>
                 <span class="link-text"><span>Contact</span></span>
             </a>
-            <a 
+            <a
                 ng-class="{ active: route == 'login' }"
                 ng-click="goTo('login')"
                 class="nav-link">
@@ -105,11 +113,11 @@
                 target="social"
                 class="social-link">
 
-                <span 
+                <span
                     class="fa"
                     ng-class="'fa-' + link.type">
                 </span>
-            </a>            
+            </a>
         </div>
     </nav>
 </section>
