updated waiver icon

--- a/app/appNav/appNavDirective.html
+++ b/app/appNav/appNavDirective.html
@@ -83,10 +83,10 @@
             </a>
              <a
                 class="nav-link"
-                ng-click="goTo('waivers')" 
+                ng-click="goTo('waivers')"
                 ng-class="{ active: route == 'waivers' }">
 
-                <span class="fa fa-money"></span>
+                <span class="fa fa-pencil"></span>
                 <span class="link-text"><span>Waivers</span></span>
             </a>
             <a
