Added more images

--- a/app/aboutUs/aboutUsController.html
+++ b/app/aboutUs/aboutUsController.html
@@ -28,7 +28,7 @@
             <ul>
                 <li><span class="bold">50 Foot Rig</span> (with numchucks, cannonballs, rings, disks, UFO, bananas)</li>
                 <li><span class="bold">30 Foot Rig</span></li>
-                <li><span class="bold">Rope Swing</span></li> 
+                <li><span class="bold">Rope Swing</span></li>
                 <li><span class="bold">Cargo Nets</span></li>
                 <li><span class="bold">Rope Climbs</span></li>
                 <li><span class="bold">Slack Line</span></li>
@@ -56,7 +56,7 @@
         <header class="section-header">Functional Training</header>
 
         <section class="section-pane">
-            <p class="image-wrapper"><img src="images/functional_2.jpg" /></p>
+            <p class="image-wrapper"><img src="images/img_2751.jpg" /></p>
             <p>At NinjaFit Gym, our boot camp style functional fitness classes are designed to get you in shape head to toe, burning calories, building strength, increasing your flexibility, and improving your cardiovascular performance, all while having fun in the process. We incorporate free weights, kettlebells, ropes, medicine balls, balance boards, TRX equipment, plyometric/bodyweight exercises, box jumps, squat racks, pull up rigs, plyo boxes, rowers, assault bikes, and more to create a workout experience that will get you fit for LIFE!</p>
         </section>
     </section>
