Small changes to formatting of pricing page.

--- a/app/appNav/appNavDirective.html
+++ b/app/appNav/appNavDirective.html
@@ -79,7 +79,7 @@
                 ng-class="{ active: route == 'pricing' }">
 
                 <span class="fa fa-money"></span>
-                <span class="link-text"><span>Pricing</span></span>
+                <span class="link-text"><span>Membership</span></span>
             </a>
              <a
                 class="nav-link"
