--- a/app/pricing/pricingDirective.html
+++ b/app/pricing/pricingDirective.html
@@ -1,8 +1,37 @@
 <section class="section pricing-view">
-
-    <header class="section-header">Pricing</header>
+    <header class="section-header">Want to become a part of NinjaFit Gym?</header>
 
     <section class="pricing-list">
+        <section class="pricing-block">
+            <section class="pricing-header">Adult Unlimited Package</section>
+
+            <section class="pricing-content">
+                <section class="price">
+                    <p class="text">$130</p>
+                    <p class="sub-text">per month</p>
+                </section>
+
+                <div class="content">
+                    <p class="item">Unlimited access to our 7 classes held every week day by Spartan SGX Coaches and OCR World Athletes leading you to victory and helping you get in the best shape of your life.</p>
+                    <p class="item">Access to Open Gyms that are held 7 days a week.</p>
+                    <p class="item">Customized programming that is tailored to functional fitness and obstacle skill development.</p>
+                    <p class="item">Free entry into our monthly NinjaNite competitions where you can see your improvements and skills as you challenge the best ninjas from across the state.</p>
+                    <p class="item">Free entry into our monthly Obstacle Skills Foundations Class taught by one of Central Florida's top OCR athletes.</p>
+                    <p class="item">Access to our Saturday OCR Groups Training classes where you will put your skills to the test and prepare for battle with your fellow OCR enthusiasts.</p>
+                </div>
+
+                <footer class="footer">
+                  <a class="btn" href="https://ninjafitgyms.sites.zenplanner.com/registration.cfm?payment=MEMBERSHIP&MembershipTemplateId=5FB656F3-70AE-4E90-8580-4C17DDE438B4">
+                    <span>Sign Up</span>
+                  </a>
+                </footer>
+            </section>
+        </section>
+      </section>
+
+      <header class="section-header">Not quite ready to dive in? Feel free to drop into one of our classes.</header>
+
+      <section class="pricing-list">
         <section class="pricing-block">
             <section class="pricing-header">Adult Single Drop-In</section>
 
@@ -15,40 +44,48 @@
                 <div class="content">
                     <p class="item">Access to <b>1</b> Class or <b>1</b> hour for Open Gym session(s).</p>
                 </div>
+
+                <footer class="footer">
+                  <a
+                    class="btn"
+                    href="mailto:{{adultDropInEmail}}">
+                    <span>Learn More</span>
+                  </a>
+                </footer>
             </section>
         </section>
+    </section>
 
+    <header class="section-header">Does your kid want to be the next American Ninja Warrior? Get them started with our Unlimited Kids Membership.</header>
+
+    <section class="pricing-list">
         <section class="pricing-block">
-            <section class="pricing-header">Adult Drop-In Package</section>
+            <section class="pricing-header">NinjaFit Kids Unlimited</section>
 
             <section class="pricing-content">
                 <section class="price">
-                    <p class="text">$100</p>
-                    <p class="sub-text">for 10 sessions</p>
-                </section>
-
-                <div class="content">
-                    <p class="item">Includes <b>10</b> Drop-In sessions.</p>
-                    <p class="item">Each Drop-In session includes unlimited access for <b>1</b> Class or <b>1</b> hour for Open Gym session(s).</p>
-                </div>
-            </section>
-        </section>
-
-        <section class="pricing-block">
-            <section class="pricing-header">Adult Unlimited Package</section>
-
-            <section class="pricing-content">
-                <section class="price">
-                    <p class="text">$130</p>
+                    <p class="text">$125</p>
                     <p class="sub-text">per month</p>
                 </section>
 
                 <div class="content">
-                    <p class="item">Unlimited gym access any day we are open!</p>
+                    <p class="item">Unlimited access to our instructor led kid classes held 6 days per week where your kids will learn obstacle skills, balance, mobility, flexibility, proper tumbling/falling, improve strength & more.</p>
+                    <p class="item">Customized programming that is tailored to obstacle skill development.</p>
+                    <p class="item">Discounted admission into our quarterly Kids Ninja Competitions.</p>
+                    <p class="item">Access to Open Gym on Friday evenings & Sunday afternoons.</p>
+                    <p class="item">15% discount off their birthday party package each year.</p>
                 </div>
+
+                <footer class="footer">
+                  <a class="btn" href="https://ninjafitgyms.sites.zenplanner.com/registration.cfm?payment=MEMBERSHIP&MembershipTemplateId=DD32FCB3-25A6-4E8D-A1F2-1FD40CE25905">
+                    <span>Sign Up</span>
+                  </a>
+                </footer>
             </section>
         </section>
     </section>
+
+    <header class="section-header">If you're not quite ready to jump into this, you can sign up for an individual class to test the waters.</header>
 
     <section class="pricing-list">
         <section class="pricing-block">
@@ -65,39 +102,19 @@
                     <p class="item">Lead by NinjaFit coach.</p>
                     <p class="item">See schedule for class times.</p>
                 </div>
-            </section>
-        </section>
 
-        <section class="pricing-block">
-            <section class="pricing-header">NinjaFit Kids Package</section>
-
-            <section class="pricing-content">
-                <section class="price">
-                    <p class="text">$90</p>
-                    <p class="sub-text">for 6 classes</p>
-                </section>
-
-                <div class="content">
-                    <p class="item">Includes a bundle of <b>6</b> NinjaFit Kids classes.</p>
-                </div>
-            </section>
-        </section>
-
-        <section class="pricing-block">
-            <section class="pricing-header">NinjaFit Kids Unlimited</section>
-
-            <section class="pricing-content">
-                <section class="price">
-                    <p class="text">$125</p>
-                    <p class="sub-text">per month</p>
-                </section>
-
-                <div class="content">
-                    <p class="item">Unlimited gym access any day we are open!</p>
-                </div>
+                <footer class="footer">
+                  <a
+                    class="btn"
+                    href="mailto:{{kidsDropInEmail}}">
+                    <span>Learn More</span>
+                  </a>
+                </footer>
             </section>
         </section>
     </section>
+
+    <header class="section-header">Interested in having a birthday party at NinjaFit?</header>
 
     <section class="pricing-list">
         <section class="pricing-block">
@@ -120,6 +137,14 @@
                     <p class="item">* Additional kids beyond 10: $15</p>
                     <p class="item">* Additional NinjaFit T-Shirts: $15</p>
                 </div>
+
+                <footer class="footer">
+                  <a
+                    class="btn"
+                    href="mailto:{{birthdayPartyEmail}}">
+                    <span>Learn More</span>
+                  </a>
+                </footer>
             </section>
         </section>
     </section>
