--- a/app/appNav/appNavDirective.html
+++ b/app/appNav/appNavDirective.html
@@ -75,6 +75,14 @@
             </a>
              <a
                 class="nav-link"
+                ng-click="goTo('bringtheruckus')"
+                ng-class="{ active: route == 'bringtheruckus' }">
+
+                <span class="fa fa-heartbeat"></span>
+                <span class="link-text"><span>Bring the Ruckus</span></span>
+            </a>
+             <a
+                class="nav-link"
                 ng-click="goTo('pricing')"
                 ng-class="{ active: route == 'pricing' }">
 
