Added bring the ruckus page.

--- a/app/appNav/appNavDirective.html
+++ b/app/appNav/appNavDirective.html
@@ -75,8 +75,8 @@
             </a>
              <a
                 class="nav-link"
-                ng-click="goTo('bringtheruckus')"
-                ng-class="{ active: route == 'bringtheruckus' }">
+                ng-click="goTo('bring-the-ruckus')"
+                ng-class="{ active: route == 'bring-the-ruckus' }">
 
                 <span class="fa fa-heartbeat"></span>
                 <span class="link-text"><span>Bring the Ruckus</span></span>
