added bring the ruckus2.0

--- a/app/appNav/appNavDirective.html
+++ b/app/appNav/appNavDirective.html
@@ -76,10 +76,10 @@
              <a
                 class="nav-link"
                 ng-click="goTo('bring-the-ruckus')"
-                ng-class="{ active: route == 'bring-the-ruckus' }">
+                ng-class="{ active: route == 'bring-the-ruckus-2' }">
 
                 <span class="fa fa-heartbeat"></span>
-                <span class="link-text"><span>Bring the Ruckus</span></span>
+                <span class="link-text"><span>Bring the Ruckus 2.0</span></span>
             </a>
              <a
                 class="nav-link"
