updated nav link for bring the ruckus

--- a/app/appNav/appNavDirective.html
+++ b/app/appNav/appNavDirective.html
@@ -75,7 +75,7 @@
             </a>
              <a
                 class="nav-link"
-                ng-click="goTo('bring-the-ruckus')"
+                ng-click="goTo('bring-the-ruckus-2')"
                 ng-class="{ active: route == 'bring-the-ruckus-2' }">
 
                 <span class="fa fa-heartbeat"></span>
