added pricing line

--- a/app/pricing/pricingDirective.html
+++ b/app/pricing/pricingDirective.html
@@ -131,6 +131,7 @@
                     <p class="item">10 guests including birthday party kid</p>
                     <p class="item">Dedicated Party Host to handle all aspects of your party</p>
                     <p class="item">1 hour of instruction with our Ninja coach on the obstacle course</p>
+                    <p class="item">1 hour of cake/food, refreshments, presents and free play in the gym. (WE DO NOT PROVIDE FOOD, CAKE OR REFRESHMENTS)</p>
                     <p class="item">NinjaFit T-shirt for the Birthday child</p>
                     <p class="item">* Additional kids beyond 10: $15</p>
                     <p class="item">* Additional NinjaFit T-Shirts: $15</p>
