updated birthday length

--- a/app/pricing/pricingDirective.html
+++ b/app/pricing/pricingDirective.html
@@ -127,7 +127,7 @@
                 </section>
 
                 <div class="content">
-                    <p class="item">1 hour and 45 minutes of FUN!</p>
+                    <p class="item">2 hours of FUN!</p>
                     <p class="item">10 guests including birthday party kid</p>
                     <p class="item">Dedicated Party Host to handle all aspects of your party</p>
                     <p class="item">1 hour of instruction with our Ninja coach on the obstacle course</p>
